libs/@local/hashql/ast/tests/ui/lower/expander/package-not-found.jsonc
//@ run: fail
//@ description: referencing a nonexistent root package should error
"::nonexistent::something"
//~^ ERROR cannot find package `nonexistent`
